# managarm

./: meson.build
core/drm/src/: core.cpp  device.cpp  ioctl.cpp
core/virtio/src/: core.cpp
docs/src/: SUMMARY.md
docs/src/contributing/: debugging.md
drivers/gfx/: 90-managarm-vga.rules
drivers/gfx/bochs/src/: main.cpp
drivers/gfx/intel-lil/src/: gfx.cpp  gfx.hpp
drivers/gfx/nv/: gfx-nv.yml  meson.build
drivers/gfx/nv/src/: gfx.hpp  main.cpp  spec.hpp  vbios.cpp  vbios.hpp
drivers/gfx/virtio/: meson.build
drivers/gfx/virtio/src/: 3d.cpp  commands.cpp  commands.hpp  main.cpp  spec.hpp  virtio.hpp
drivers/libblockfs/src/: libblockfs.cpp
drivers/nic/: 90-managarm-nic.rules
drivers/nic/i8254x/src/: i8254x.cpp  rx.cpp  tx.cpp
drivers/nic/usb_net/: meson.build
drivers/nic/usb_net/src/: usb-mbim.cpp  usb-ncm.cpp  usb-net.cpp  usb-wmc.cpp  usb-wmc.hpp
drivers/usb/: 90-managarm-usb.rules
hel/include/helix/: ipc-structs.hpp
kernel/thor/generic/: address-space.cpp
kernel/thor/generic/thor-internal/: address-space.hpp
kernel/thor/system/pci/: pci_discover.cpp  pci_quirks.cpp
mbus/src/: main.cpp
posix/init/src/: stage2.cpp
posix/subsystem/src/: common.hpp  drvcore.cpp  drvcore.hpp  epoll.cpp  epoll.hpp  file.cpp  fs.cpp  fs.hpp  main.cpp  nl-socket.cpp  procfs.cpp  procfs.hpp  requests.cpp  sysfs.cpp  un-socket.cpp
protocols/fs/: fs.bragi
protocols/fs/src/: server.cpp
protocols/posix/: posix.bragi
protocols/usb/src/: client.cpp
servers/netserver/: meson.build
servers/netserver/src/: main.cpp  nic.cpp
(+43 files in other folders)
